<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">ICare Launcher</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="sos" translatable="false">SOS</string>
    <string name="emergency">Definir mensagem de emergência</string>
    <string name="definir_segundo_contato">Definir segundo contato</string>
    <string name="definir_primeiro_contato">Definir primeiro contato</string>
    <string name="apagar_todos">Apagar todos</string>
    <string name="edAlarm">EDITAR ALARME</string>
    <string name="nome">NOME</string>
    <string name="descricao">DESCRIÇÃO</string>
    <string name="data">DATA</string>
    <string name="hora">HORA</string>
    <string name="repetir_vezes_restantes">REPETIR (VEZES RESTANTES)</string>
    <string name="espaco_de_tempo">ESPAÇO DE TEMPO</string>
    <string name="ligar_desligar">LIGAR/DESLIGAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="sim">SIM</string>
    <string name="ainda_nao">AINDA NÃO</string>
    <string name="remedio">VOCÊ JÁ TOMOU SEU REMÉDIO?</string>
    <string name="alarme">ALARME</string>
    <string name="nota">NOTA</string>
    <string name="salvar">SALVAR</string>
    <string name="novo_alarme">NOVO ALARME</string>
    <string name="digite_aqui_o_nome">DIGITE AQUI O NOME DO ALARME</string>
    <string name="digite_descricao">DIGITE AQUI A DESCRIÇÃO</string>
    <string name="data_inicial">DATA INICIAL</string>
    <string name="escolha_a_data_inicial">ESCOLHA A DATA INICIAL</string>
    <string name="hora_inicial">HORA INICIAL</string>
    <string name="escolha_a_hora_inicial">ESCOLHA A HORA INICIAL</string>
    <string name="repetir_n_de_vezes">REPETIR (NÚMERO DE VEZES)</string>
    <string name="quantas_vezes_o_alarme_deve_tocar">QUANTAS VEZES O ALARME DEVE TOCAR?</string>
    <string name="time_00_00">00:00</string>
    <string name="hora_remedio_tomado">HORA QUE O REMÉDIO FOI TOMADO</string>
    <string name="mensagem">MENSAGEM</string>
    <string name="escreva_aqui_sua_mensagem">ESCREVA AQUI SUA MENSAGEM</string>
    <string name="historico">HISTÓRICO</string>
    <string name="escolha_app">Escolha um app primeiro</string>
    <string name="nota_salva">Nota salva!</string>
    <string name="alteracoes_descartadas">Alterações descartadas!</string>
    <string name="mensagem_salva">Mensagem salva!</string>
    <string name="mensagem_atualizada">Mensagem atualizada!</string>
    <string name="defina_contato">Defina um contato primeiro!</string>
    <string name="defina_mensagem">Defina uma mensagem primeiro!</string>
    <string name="escolha_imagem">Escolha uma imagem!</string>
    <string name="preencha">Preencha todos os campos!</string>
    <string name="cancelado">Cancelado</string>
    <string name="alteracoes_salvas">Alterações Salvas</string>
    <string name="alarme_ira_tocar_h">O alarme irá tocar a cada %1$d horas</string>
    <string name="alarme_ira_tocar_m">O alarme irá tocar a cada %1$d minutos</string>
    <string name="alarme_cada">O alarme irá tocar a cada %1$d horas e %2$d minutos</string>
    <string name="numero1_salvo">Primeiro contato definido!</string>
    <string name="numero1_atualizado">Primeiro contato atualizado!</string>
    <string name="numero2_salvo">Segundo contato definido!</string>
    <string name="numero2_atualizado">Segundo contato atualizado!</string>
    <string name="data_remedio_tomado">DATA EM QUE O REMÉDIO FOI TOMADO</string>
    <string name="occupy" translatable="false">TextView</string>
    <string name="que_bom">Que bom!</string>
    <string name="tome_agora">Tome seu remédio agora!</string>
    <string name="primeiro_toque">Primeiro toque deste alarme</string>
    <string name="demais_toques">Este alarme já  tocou %1$d vezes</string>
    <string name="excluir">Excluir</string>
    <string name="certeza_excluir">Tem certeza que quer excluir o histórico?</string>
    <string name="historico_deletado">Histórico deletado com sucesso!</string>
    <string name="certeza_excluir_alarme">Tem certeza que quer exluir o alarme?</string>
    <string name="alarme_deletado">Alarme deletado com sucesso!</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8321777709085519/9428115266</string>
    <string name="banner_ad_initialize" translatable="false">ca-app-pub-8321777709085519~4125895113</string>
</resources>
