<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/escreva_aqui_sua_mensagem"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnSalvarWrite"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textSize="20sp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewMensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>
