<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="FragmentAlarmes"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/Linear2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNomeNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edNota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryLight"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSalvarNota"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>
</RelativeLayout>